tests/semantics/invalid/bad_vec_size.s23
int vec1[3] 1 2 3 4;
int vec2[3] 1 2;